// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Error 1/1

> 1 | query test { bar }
    |       ^^^^ Operation named "test" already defined in:
	6844040.graphql
`;

exports[` 2`] = `
Error 1/1

> 1 | query test { bar }
    |       ^^^^ Operation named "test" already defined in:
	6844040.graphql
	84823255.graphql
`;
